--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <title>Geeks+Fansite</title>
+    <title>GeeX+Fansite</title>
     <style>
       .noscriptDiv {
         display: flex;
